syntax = "proto3";

package proto;

import "proto/memory_message.proto";

option go_package = ".;pb";

message CPU {
    string brand = 1;
    string name = 2;  
    uint32 number_cores =3;
    uint32 number_threads = 4;
    double min_qhz = 5;
    double max_ghz = 6;
     
}

message GPU {
    string brand = 1;
    string name = 2;
    double min_ghz = 3;
    double max_ghz = 4;
    Memory memory = 5;
  }